--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Number 3735928559 is cool in hex.
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <form
+      action="https://formsubmit.co/9af8644355c8178401ecd89033f0cbe4"
+      method="POST"
+    >
+      <input
+        type="hidden"
+        name="_next"
+        value="/thanks.html"
+      />
+
+      <label for="name">Your name:</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Your email:</label>
+      <input type="email" id="email" name="email" required />
+
+      <button type="submit">Sign me up</button>
+    </form>
+  </body>
+</html>
