fix thanks being relative to formsubmit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <input
         type="hidden"
         name="_next"
-        value="/thanks.html"
+        value="https://cmsbc.uk/thanks.html"
       />
 
       <label for="name">Your name:</label>
